<resources>
    <string name="app_name">FacteSimchin</string>
    <string name="facte_simchin">فکت سیم‌چین️\n🛠️</string>
    <string name="mafia_game">\nبازی مافیا</string>
    <string name="start_game">شروع بازی</string>
    <string name="designed_by_mehrbod">طراحی شده توسط مهربد</string>
    <string name="mordad_1404_with_version">نسخه:  %1$s</string>
    <string name="please_enter_player_names">لطفاً اسامی بازیکنان را وارد کنید.</string>
    <string name="new_player_name">نام بازیکن جدید را اینجا بنویسید</string>
    <string name="action_add">اضافه کردن</string>
    <string name="remove">حذف</string>
    <string name="name_cannot_be_empty">‌نام نمی‌تواند خالی باشد!</string>
    <string name="player_already_exists">‌بازیکن قبلاً به لیست اضافه شده است.</string>
    <string name="no_players_available">‌بازیکنی موجود نیست.</string>
    <string name="at_least_5_players">‌حداقل 5 بازیکن برای بازی نیاز است.</string>
    <string name="why_no_mafias">شهر بدون مافیا نمیشه که…</string>
    <string name="mafia_always_wins">اینطوری که همیشه مافیا برنده اس…</string>
    <string name="incorrect_number_of_roles">نقش ها باید با تعداد بازیکنان برابر باشد.</string>
    <string name="chosen_role_stats">مافیا:  %1$d |  شهروند:  %2$d | خنثی:  %3$d\nتعداد کل نقش ها:  %4$d\nتعداد کل بازیکنان:  %5$d</string>
    <string name="role_godfather">پدرخوانده</string>
    <string name="role_mafia">مافیا</string>
    <string name="role_negotiator">مذاکره کننده</string>
    <string name="role_bomber">بمب‌گذار</string>
    <string name="role_citizen">شهروند</string>
    <string name="role_detective">کارآگاه</string>
    <string name="role_doctor">دکتر</string>
    <string name="role_sniper">اسنایپر</string>
    <string name="role_gunner">تفنگ‌دار</string>
    <string name="role_detonator">نگهبان</string>
    <string name="role_hardliving">روئین‌تن</string>
    <string name="role_joker">جوکر</string>
    <string name="role_bartender">ساقی</string>
    <string name="role_lecter">دکتر لکتر</string>
    <string name="accept">تأیید</string>
    <string name="assign_roles_please_click">تعیین نقش بازیکنان\nنامبرده بر روی کارت خود کلیک کند.</string>
    <string name="player_name">نام بازیکن</string>
    <string name="player_role">نقش بازیکن</string>
    <string name="ok">قبول</string>
    <string name="talk">صحبت</string>
    <string name="kill">کشتن</string>
    <string name="game_turn">دست %1$d %2$s</string>
    <string name="is_dead">مرگ</string>
    <string name="introductory_turn">(دست معارفه)</string>
    <string name="the_living">زنده ها</string>
    <string name="the_dead">مرده ها</string>
    <string name="mafia">مافیا:</string>
    <string name="citizen">شهروند:</string>
    <string name="neutral">خنثی:</string>
    <string name="zero_string">0</string>
    <string name="timer">زمان سنج</string>
    <string name="timer_value">%1$02d : %2$02d</string>
    <string name="timer_working">صحبت کنید…</string>
    <string name="timer_near_the_end">نزدیک به پایان زمان…</string>
    <string name="timer_last_words">حرف آخر…!</string>
    <string name="timer_the_end">تمام شد!</string>
    <string name="everyone_sleep">شب میشه،\nهمگی بخوابن! 😴</string>
    <string name="everyone_sleep_midday">عصر میشه،\nهمگی بخوابن! 😴</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="question">سؤال</string>
    <string name="are_you_sure_go_night">آیا واقعاً می خواهید شب شود؟\nمطمئن شوید تمامی بازیکنان صحبت کرده باشند و رای گیری ها انجام شده باشد.</string>
    <string name="are_you_sure_go_midday">آیا می‌خواهید همگی به خواب نیم‌روزی بروند؟</string>
    <string name="has_died">مُرده</string>
    <string name="wake_up">%1$s بیدار شه!\n\n%2$s</string>
    <string name="show_like">%1$s لایک نشون بده!\n\n%2$s</string>
    <string name="sleep">%1$s بخوابه...!\n\n%2$s</string>
    <string name="remove_all">حذف همه</string>
    <string name="add">اضافه کردن</string>
    <string name="target_player">بازیکن مقصد:</string>
    <string name="mission">عملیات:</string>
    <string name="source_player">بازیکن مبدأ:</string>
    <string name="wake_up_everyone">روز میشه.\nهمه بیدار شن! 🥱</string>
    <string name="does_what">چی کار میکنه؟</string>
    <string name="action_godfather_shoot">شلیک تیر شب</string>
    <string name="action_godfather_nato">ناتویی</string>
    <string name="action_bomber_bomb">بمب گذاری</string>
    <string name="action_detective_acknowledge">استعلام</string>
    <string name="action_doctor_heal">نجات دادن</string>
    <string name="action_sniper_shoot">شلیک تیر</string>
    <string name="action_gunner_dummy_bullet">تیر مشقی</string>
    <string name="action_gunner_war_bullet">تیر جنگی</string>
    <string name="action_detonator_detonate">خنثی کردن بمب</string>
    <string name="choose_source_player">انتخاب بازیکن مبدأ</string>
    <string name="choose_mission">انتخاب عملیات</string>
    <string name="choose_target_player">انتخاب بازیکن هدف</string>
    <string name="cancel">لغو</string>
    <string name="choose">انتخاب کنید…</string>
    <string name="players_do_what">%1$s\n%2$s\n%3$s</string>
    <string name="night_command_item">%1$d- %2$s عملیات %3$s را روی %4$s انجام می‌دهد. %5$s</string>
    <string name="choose_godfahter_nato">نقش ناتویی:</string>
    <string name="bomber_does_what">بمب میذاره؟</string>
    <string name="choose_bomb_code">کد بمب:</string>
    <string name="doctor_does_what">کیو نجات میده؟</string>
    <string name="lecter_does_what">کدوم مافیا رو نجات میده؟</string>
    <string name="detective_does_what">استعلام کیو میگیره؟</string>
    <string name="sniper_does_what">به کی شلیک میکنه؟</string>
    <string name="gunner_does_what">به کیا تیر میده؟</string>
    <string name="doctor_saved_player_from_godfather">دکتر، بازیکن %1$s را از شر تیر مافیا نجات داد.</string>
    <string name="say_goodbye_to_because_mafia_shot">خداحافظی می کنیم با %1$s، چون مافیا بهش تیر زد.</string>
    <string name="congratulations_sniper">عجب اسنایپری داره این شهر، مافیا %1$s رو زد!</string>
    <string name="day_events_title">رخدادهای شب گدشته</string>
    <string name="midday_events_title">رخدادهای نیم‌روز گدشته</string>
    <string name="acknowledge_result">استعلام: %1$s</string>
    <string name="positive">مثبت</string>
    <string name="negative">منفی</string>
    <string name="report_game_bombs">بمب های این دست</string>
    <string name="report_game_bullets">تیر های این دست</string>
    <string name="report_bullet">بازیکن %1$s با نقش %2$s، تیر %3$s دارد.</string>
    <string name="bullet_war">جنگی</string>
    <string name="bullet_dummy">مشقی</string>
    <string name="report_bomb">بمب جلوی بازیکن \'%1$s\' با کد %2$s فعال است.</string>
    <string name="died"> (مرده)</string>
    <string name="please_choose_roles">لطفاً نقش‌ها را انتخاب کنید:</string>
    <string name="mafia_talk">مذاکره</string>
    <string name="talk_failed_because">مذاکره با بازیکن %1$s انجام نشد چون نقش ایشان %2$s بود.</string>
    <string name="talk_success">مذاکره با بازیکن %1$s با موفقیت انجام شد و الان، یک مافیای جدید داریم.</string>
    <string name="say_goodbye_to_because_wrong_snipe">خداحافظی می کنیم با %1$s، چون اسنایپر بود و یه شهروند رو زد.</string>
    <string name="say_goodbye_to_because_natoed">خداحافظی می کنیم با %1$s، چون نقشش %2$s بود و ناتویی شد.</string>
    <string name="nato_failed">بازیکن %1$s ناتویی نشد، چون نقشش %2$s بود، نه %3$s.</string>
    <string name="touch"> (لمس کنید)</string>
    <string name="dont_touch"> (لمس نکنید)</string>
    <string name="hardliving_shield_dropped">زره %1$s افتاد و او حالا یک شهروند است.</string>
    <string name="present">حاضر</string>
    <string name="absent">غایب</string>
    <string name="player_name_and_role_format">%1$s (%2$s)</string>
    <string name="dead">مرده</string>
    <string name="alive">زنده</string>
    <string name="player_state_normal">عادی</string>
    <string name="player_state_got_challenge">چالش</string>
    <string name="player_state_voted">رأی</string>
    <string name="player_state_bookmarked">مهم</string>
    <string name="player_state_kicked">اخراج</string>
    <string name="citizen_abbreviation">شهر</string>
    <string name="joker_turned_mafia">بازیکن %1$s جوکر بود و حالا مافیا شد، چون %2$s.</string>
    <string name="joker_turned_citizen">بازیکن %1$s جوکر بود و حالا شهروند شد، چون %2$s.</string>
    <string name="reason_mafia_negotiated">مافیا مذاکره کرد</string>
    <string name="reason_sniper_shot">اسنایپر شلیک کرد</string>
    <string name="reason_mafia_natoed">مافیا ناتویی کرد</string>
    <string name="reason_mafia_shot">مافیا شلیک تیر شب کرد</string>
    <string name="reason_doctor_saved">دکتر نجاتش داد</string>
    <string name="bartender_gives_drink">مست کردن</string>
    <string name="bartender_does_what">کیو مست میکنه؟</string>
    <string name="player_was_drunk">بازیکن %1$s دیشب مست بود و عملیاتش به درستی انجام نشد.</string>
    <string name="lecter_saves_mafia">نجات مافیا</string>
    <string name="lecter_saved_mafia_from_shot">دکتر لکتر تونست مافیا %1$s رو از تیر شهر نجات بده.</string>
    <string name="dummy_bullet">مشقی</string>
    <string name="war_bullet">جنگی</string>
    <string name="please_choose_shooter">لطفاً بازیکنی را که قصد شلیک تیر روز را دارد، انتخاب کنید:</string>
    <string name="bullet_accepted_choose_target">تیر بازیکن \'%1$s\' تأیید شد.\nبه چه کسی شلیک می‌کنید؟</string>
    <string name="war_bullet_is_shot_with_role">تیر بازیکن \'%1$s\' «%2$s» بود و بازیکن هدف \'%3$s\' با ساید %4$s از بازی خارج می‌شود.</string>
    <string name="dummy_bullet_is_shot">تیر بازیکن «%1$s» \'مشقی\' بود و اتفاق خاصی نیفتاد.</string>
    <string name="mafia_no_colons">مافیا</string>
    <string name="cannot_go_night">شب نمی‌شود!</string>
    <string name="cannot_go_night_bombs">بمب در بازی در جریان است و باید خواب نیم‌روزی انجام شود.</string>
    <string name="cannot_go_midday">در این زمان، مجاز به خواب نیم‌روزی نمی‌باشید.</string>
    <string name="detonator_does_what">بمب رو خنثی می‌کنه؟</string>
    <string name="bomb_not_detonated_player_detonate">نگهبان، بمب بازیکن \'%1$s\' رو گردن نگرفت. حدس بازیکن را انتخاب کنید:</string>
    <string name="bomb_detonated_with_correct_code">بمب مافیا با موفقیت خنثی شد. تبریک به شهر!</string>
    <string name="bomb_exploded_say_goodbye_to">متأسفانه، بمب منفجر شد و خداحافظی می‌کنیم با \'%1$s\'</string>
    <string name="bomb_detonated_by_detonator">بمب بازیکن \'%1$s\' توسط نگهبان خنثی با موفقیت خنثی شد. تبریک به شهر!</string>
    <string name="bomb_exploded_by_detonator">نگهبان نتونست کد بمب رو به درستی حدس بزنه، خداحافظی می‌کنیم با \'%1$s\'</string>
    <string name="cannot_go_night_bullets">تیر تفنگدار در بازی در جریان است و باید شلیک شود.</string>
    <string name="sorry_error_happened">متأسفانه، خطای ناخواسته به وقوع پیوست.\n\nبا بستن و اجرای دوباره برنامه، می توانید بازی قبلی را ادامه دهید.\n\nجزئیات خطا به شرح ذیل است:</string>
    <string name="copy_to_clipboard">کپی به کلیپ بورد</string>
    <string name="exit_game">خروج از بازی</string>
    <string name="clipboard_write_success">کپی شد.</string>
    <string name="clipboard_write_failure">کپی نشد!</string>
    <string name="detonator_not_available">باید حداقل یک نگهبان در بازی انتخاب کنید!</string>
    <string name="save_game_successful">بازی ذخیره شد.</string>
    <string name="save_game_unsuccessful">بازی ذخیره نشد!</string>
    <string name="load_game_successful">بازی بارگیری شد.</string>
    <string name="load_game_unsuccessful">بازی بارگیری نشد!</string>
    <string name="question_continue_game">آیا مایل به ادامه بازی قبلی هستید؟\nدر صورت عدم تمایل، اطلاعات قبلی حذف خواهند شد.</string>
</resources>