<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#00000000">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/buttonSelectPlayerNameItem"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:backgroundTint="#3F51B5"
            android:textColor="#ffffff"
            android:text="@string/present"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/list_item_text"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/mafia_game"
            android:textColor="#ffffff"
            android:ellipsize="marquee"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="#00000000"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/list_item_removeButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:background="@drawable/button_selector"
            android:text="@string/remove"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center_horizontal|center_vertical" />

    </LinearLayout>

</LinearLayout>