<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignRoleCards"
    android:layout_margin="7dp">

    <ScrollView
        android:id="@+id/scrollViewAssignRoleCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textViewAssignRolesTitle"
                android:textColor="#ffffff"
                android:text="@string/assign_roles_please_click"
                android:gravity="center"
                android:background="#00000000"
                android:textSize="25sp">
            </TextView>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:id="@+id/imageViewCard"
                android:src="@drawable/card_question"
                android:background="#00000000"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAssignRolesTitle"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlayerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewCard"
                app:layout_constraintBottom_toTopOf="@id/textViewPlayerRole"
                android:textColor="#ffffff"
                android:text="@string/player_name"
                android:gravity="center"
                android:background="#00000000"
                android:textSize="50sp"
                android:textStyle="italic"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlayerRole"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPlayerName"
                android:textColor="#ffffff"
                android:text="@string/player_role"
                android:gravity="center"
                android:background="#00000000"
                android:textSize="50sp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRoleOK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPlayerRole"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_selector"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:textColor="#ffffff"
                android:text="@string/ok"
                android:textSize="40sp"
                android:visibility="invisible"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>